--- a/emberek.html
+++ b/emberek.html
@@ -115,7 +115,7 @@
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#jobbrabalra" role="button" data-slide="pre">
+        <a class="carousel-control-prev" href="#jobbrabalra" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
