--- a/emberek.html
+++ b/emberek.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="emberek.css">
+    <link rel="stylesheet" href="css/emberek.css">
     <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <a href="index.html" id="logo"><img width="150px" src="LogoNavBar.png" alt=""></a>
+        <a href="index.html" id="logo">9.A</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -34,16 +34,14 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col-md-6">
-                  <div class="card-body">
-                    <h5 class="card-title">Leírás</h5>
-                    <p class="card-text">???</p>
-                    <hr>
-                    <p class="blockquote-footer quote">Idézet</p>
-                    <p class="card-text">"Dunka!!"</p>
-                  </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">????</p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">"Dunka"</p>
                 </div>
               </div>
             </div>
@@ -52,16 +50,14 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="/img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col-md-6">
-                  <div class="card-body">
-                    <h5 class="card-title">Leírás</h5>
-                    <p class="card-text">???</p>
-                    <hr>
-                    <p class="blockquote-footer">Idézet</p>
-                    <p class="card-text">"Orbán Viktor ilyen törpe ember"</p>
-                  </div>
+                <div class="col-md-6 card-content">
+                  <h5 class="card-title">Leírás</h5>
+                  <p class="card-text">????</p>
+                  <hr>
+                  <p class="blockquote-footer quote">Idézet</p>
+                  <p class="card-text">"Orbán Viktor ilyen törpe ember"</p>
                 </div>
               </div>
             </div>
@@ -70,7 +66,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="/img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -86,7 +82,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="/img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -102,7 +98,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="/img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
