--- a/emberek.html
+++ b/emberek.html
@@ -50,7 +50,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="/img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -66,7 +66,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="/img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -82,7 +82,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="/img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -98,7 +98,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="/img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
