--- a/emberek.html
+++ b/emberek.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/emberek.css">
+    <link rel="stylesheet" href="emberek.css">
     <title>Document</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <a href="index.html" id="logo">9.A</a>
+        <a href="index.html" id="logo"><img width="150px" src="LogoNavBar.png" alt=""></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -27,21 +27,26 @@
             
         </div>
     </nav>
-
+    <br>
+    <br>
+    <br>
+    <br>
     <div id="jobbrabalra" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="gábor.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">????</p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">"Dunka"</p>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Leírás</h5>
+                    <p class="card-text">???</p>
+                    <hr>
+                    <p class="blockquote-footer quote">Idézet</p>
+                    <p class="card-text">"Dunka!!"</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -50,14 +55,16 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="gábor.jpg" class="d-block w-100" alt="...">
                 </div>
-                <div class="col-md-6 card-content">
-                  <h5 class="card-title">Leírás</h5>
-                  <p class="card-text">????</p>
-                  <hr>
-                  <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">"Orbán Viktor ilyen törpe ember"</p>
+                <div class="col-md-6">
+                  <div class="card-body">
+                    <h5 class="card-title">Leírás</h5>
+                    <p class="card-text">???</p>
+                    <hr>
+                    <p class="blockquote-footer">Idézet</p>
+                    <p class="card-text">"Orbán Viktor ilyen törpe ember"</p>
+                  </div>
                 </div>
               </div>
             </div>
@@ -66,7 +73,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -82,7 +89,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -98,7 +105,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
