--- a/emberek.html
+++ b/emberek.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="emberek.css">
+    <link rel="stylesheet" href="css/emberek.css">
     <title>Document</title>
 </head>
 <body>
@@ -37,7 +37,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
@@ -55,7 +55,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6">
                   <div class="card-body">
@@ -73,7 +73,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -89,7 +89,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -105,7 +105,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="gábor.jpg" class="d-block w-100" alt="...">
+                  <img src="img/gábor.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
