--- a/index.html
+++ b/index.html
@@ -4,27 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/emberek.css">
+    <link rel="stylesheet" href="css/index.css">
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <a href="index.html" id="logo"><img width="150px" src="LogoNavBar.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-            aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse sticky-top" id="navbarNav">
-            <div class="navbar-nav ml-auto" id="balra">
-                <li class=""><a href="emberek.html">Osztálytársaink</a></li>
-                <li class=""><a href="alkatresz.html">Alkatrészek</a></li>
-                <li class=""><a href="#">DunkaCoin</a></li>
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">9.A</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="navbar" href="emberek.html">Osztálytársaink</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar" href="#">Galéria</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="navbar" href="#">Kapcsolat</a>
+                    </li>
+                </ul>
             </div>
-            <ul class="navbar-nav ml ml-auto" id="kosar">
-                <a href="index.php" id="bejelentkezes"><img width="30px" src="login.png" alt=""></a>
-                <a href="#" id=""><img width="30px" src="cart-2655083_1920.png" alt=""></a>
-            </ul>
-            
         </div>
     </nav>
 
