--- a/emberek.html
+++ b/emberek.html
@@ -8,25 +8,27 @@
     <title>Document</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
-        <a href="index.html" id="logo"><img width="150px" src="LogoNavBar.png" alt=""></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-            aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-lg navbar-dark ">
+    <div class="container">
+        <a class="navbar-brand" href="index.html">9.A</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse sticky-top" id="navbarNav">
-            <div class="navbar-nav ml-auto" id="balra">
-                <li class=""><a href="emberek.html">Osztálytársaink</a></li>
-                <li class=""><a href="alkatresz.html">Alkatrészek</a></li>
-                <li class=""><a href="#">DunkaCoin</a></li>
-            </div>
-            <ul class="navbar-nav ml ml-auto" id="kosar">
-                <a href="index.php" id="bejelentkezes"><img width="30px" src="login.png" alt=""></a>
-                <a href="#" id=""><img width="30px" src="cart-2655083_1920.png" alt=""></a>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="navbar" href="emberek.html">Osztálytársaink</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar" href="#">Galéria</a>
+                </li>
+                <li class="nav-item">
+                    <a class="navbar" href="#">Kapcsolat</a>
+                </li>
             </ul>
-            
         </div>
-    </nav>
+    </div>
+ </nav>
     <br>
     <br>
     <br>
