--- a/emberek.html
+++ b/emberek.html
@@ -38,7 +38,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Nándi.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/Nándi.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -60,7 +60,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Ati.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/BAti.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -82,7 +82,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/BBoti.png" class="d-block w-100" alt="...">
+                  <img src="img/emberek/BBoti (1).png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -104,7 +104,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/bence.jpg" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/BBence.png" height="800px" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -126,7 +126,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Ábel.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/BÁbel.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -148,7 +148,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Hering.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/BLevi.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -170,7 +170,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Hiányzott.JPG" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/FarkasMáté.png" height="800px" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -214,7 +214,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/FLevi.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/FLevi.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -236,7 +236,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Krisztián.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/Krisztián.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -258,7 +258,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Andris.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/Andris.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -280,7 +280,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Homolya.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/HNándi.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -302,7 +302,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Kéri.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/KAti.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -324,7 +324,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/KBálint.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/KBálint.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -346,7 +346,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Hiányzott.JPG" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/KRoli.png" height="800px" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -368,7 +368,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Kónya.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/KGellért.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -390,7 +390,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Kristóf.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/KKristóf.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -412,7 +412,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/KGergő.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/KGergő.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -434,7 +434,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Hiányzott.JPG" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/MMarci.png" height="800px" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -456,7 +456,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Hiányzott.JPG" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/NMarci.png" height="800px" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -478,7 +478,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Szabi.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/NSzabi.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -500,7 +500,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Imre.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/NImre.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -522,7 +522,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Oreskó.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/OZétény.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -544,7 +544,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Dunka.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/PDominik.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -566,7 +566,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Prokop.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/PLevi.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -588,7 +588,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Zoli.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/SZoli.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -610,7 +610,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Hunor.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/SHunor.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -632,7 +632,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Gabi1.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/SZGábor.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -654,7 +654,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Kornél.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/SZKornél.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -676,7 +676,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Laci.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/SZLaci.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -698,7 +698,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/SZBálint.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/SZBálint.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -720,7 +720,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/Zsombor.JPG" class="d-block w-100" alt="...">
+                  <img src="img/emberek/Zsombor.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
