--- a/emberek.html
+++ b/emberek.html
@@ -170,14 +170,14 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/FarkasMáté.png" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/FarkasMáté.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
                   <p class="card-text">
-                    Név:Farkas Máté
+                    Név:Bíró Levente
                     <br>
-                    Életkor:15
+                    Életkor:14
                     <br>
                   </p>
                   <hr>
