--- a/emberek.html
+++ b/emberek.html
@@ -104,7 +104,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/BBence.png" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/BBence.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -346,7 +346,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/KRoli.png" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/KRoli.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -434,7 +434,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/MMarci.png" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/MMarci.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
@@ -456,7 +456,7 @@
             <div class="container">
               <div class="row card">
                 <div class="col-md-6">
-                  <img src="img/emberek/NMarci.png" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/NMarci.png" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
