--- a/emberek.html
+++ b/emberek.html
@@ -20,7 +20,7 @@
                     <a class="navbar" href="emberek.html">Osztálytársaink</a>
                 </li>
                 <li class="nav-item">
-                    <a class="navbar" href="#">Galéria</a>
+                    <a class="navbar" href="galeria.html">Galéria</a>
                 </li>
                 <li class="nav-item">
                     <a class="navbar" href="#">Kapcsolat</a>
