--- a/galeria.html
+++ b/galeria.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/galeria.css">
-    <title>Document</title>
+    <title>Galéria</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -30,10 +30,33 @@
         </div>
     </nav>
 
-    <img src="img/gábor.jpg" width="800px" height="800px" class="kozep" alt="">
-    
+    <div class="container mt-5">
+      <div class="row">
+		<div class="col mx-6 p-4 hobbi rounded">
+			<div class="card" style="width: 80%; margin:auto">
+                <video controls>
+                    <source src="img/zsombor_hal.mp4" type="video/mp4">              
+                </video>
+				<div class="card-body">
+					<p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
+				</div>
+			</div>
+		</div>
+		<div class="col mx-6 p-4 hobbi rounded">
+			<div class="card" style="width: 80%; margin:auto">
+                <video controls>
+                    <source src="img/zsombor_hal.mp4" type="video/mp4">              
+                </video>
+				<div class="card-body">
+					<p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
+				</div>
+			</div>
+		</div>
+      </div>
+  </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
-</html>
+</html> 
