--- a/galeria.html
+++ b/galeria.html
@@ -35,7 +35,7 @@
 		<div class="col mx-6 p-4 hobbi rounded">
 			<div class="card" style="width: 80%; margin:auto">
                 <video controls>
-                    <source src="img/zsombor_hal.mp4" type="video/mp4">              
+                    <source src="img/Galeria/zsombor_hal.mp4" type="video/mp4">              
                 </video>
 				<div class="card-body">
 					<p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
@@ -45,7 +45,7 @@
 		<div class="col mx-6 p-4 hobbi rounded">
 			<div class="card" style="width: 80%; margin:auto">
                 <video controls>
-                    <source src="img/zsombor_hal.mp4" type="video/mp4">              
+                    <source src="img/Galeria/zsombor_hal.mp4" type="video/mp4">              
                 </video>
 				<div class="card-body">
 					<p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
