--- a/galeria.html
+++ b/galeria.html
@@ -61,6 +61,14 @@
 				<div class="card-body">
 					<p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
 				</div>
+				                <div class="card" style="width: 80%; margin:auto">
+                    <video controls>
+                        <source src="img/Galeria/c4-3.mp4" type="video/mp4">              
+                    </video>
+                    <div class="card-body">
+                        <p class="card-text h5 fw-bold text-center">Boti + C4</p>
+                    </div>
+                </div>
 			</div>
 		</div>
       </div>
