--- a/galeria.html
+++ b/galeria.html
@@ -56,22 +56,25 @@
 		<div class="col mx-6 p-4 hobbi rounded">
 			<div class="card" style="width: 80%; margin:auto">
                 <video controls>
-                    <source src="img/Galeria/zsombor_hal.mp4" type="video/mp4">              
+                    <source src="img/Galeria/gellertko.mp4" type="video/mp4">              
                 </video>
 				<div class="card-body">
-					<p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
+					<p class="card-text h5 fw-bold text-center">Gellért Vs Marci</p>
 				</div>
-				                <div class="card" style="width: 80%; margin:auto">
-                    <video controls>
-                        <source src="img/Galeria/c4-3.mp4" type="video/mp4">              
-                    </video>
-                    <div class="card-body">
-                        <p class="card-text h5 fw-bold text-center">Boti + C4</p>
-                    </div>
-                </div>
 			</div>
 		</div>
       </div>
+      <div class="col mx-6 p-4 hobbi rounded">
+        <div class="card" style="width: 80%; margin:auto">
+            <video controls>
+                <source src="img/Galeria/pingpong1.mp4" type="video/mp4">              
+            </video>
+            <div class="card-body">
+                <p class="card-text h5 fw-bold text-center">Átlaános Szünet</p>
+            </div>
+        </div>
+    </div>
+  </div>
   </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
