--- a/fotok.html
+++ b/fotok.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/galeria.css">
+    <link rel="stylesheet" href="css/fotok.css">
     <title>Galéria</title>
 </head>
 <body>
@@ -45,21 +45,33 @@
       <div class="row">
 		<div class="col mx-6 p-4 hobbi rounded">
 			<div class="card" style="width: 80%; margin:auto">
-                <video controls>
-                    <source src="img/Galeria/zsombor_hal.mp4" type="video/mp4">              
-                </video>
+                <img src="img/Galeria/azelsonyolcas.JPG" alt="">
 				<div class="card-body">
-					<p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
+					<p class="card-text h5 fw-bold text-center">A banda</p>
 				</div>
 			</div>
 		</div>
 		<div class="col mx-6 p-4 hobbi rounded">
 			<div class="card" style="width: 80%; margin:auto">
-                <video controls>
-                    <source src="img/Galeria/zsombor_hal.mp4" type="video/mp4">              
-                </video>
+                <img src="img/Galeria/lezerharc.JPG" alt="">
 				<div class="card-body">
-					<p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
+					<p class="card-text h5 fw-bold text-center">A Lézerharc</p>
+				</div>
+			</div>
+		</div>
+        <div class="col mx-6 p-4 hobbi rounded">
+			<div class="card" style="width: 80%; margin:auto">
+                <img src="img/Galeria/7days.JPG" alt="">
+				<div class="card-body">
+					<p class="card-text h5 fw-bold text-center">007 Days</p>
+				</div>
+			</div>
+		</div>
+        <div class="col mx-6 p-4 hobbi rounded">
+			<div class="card" style="width: 80%; margin:auto">
+                <img src="img/Galeria/cs16.jpg" alt="">
+				<div class="card-body">
+					<p class="card-text h5 fw-bold text-center">A hátsó padsor</p>
 				</div>
 			</div>
 		</div>
