--- a/fotok.html
+++ b/fotok.html
@@ -47,7 +47,7 @@
 			<div class="card" style="width: 80%; margin:auto">
                 <img src="img/Galeria/azelsonyolcas.JPG" alt="">
 				<div class="card-body">
-					<p class="card-text h5 fw-bold text-center">A banda</p>
+					<p class="card-text h5 fw-bold text-center">Az első nyolcas</p>
 				</div>
 			</div>
 		</div>
@@ -72,6 +72,14 @@
                 <img src="img/Galeria/cs16.jpg" alt="">
 				<div class="card-body">
 					<p class="card-text h5 fw-bold text-center">A hátsó padsor</p>
+				</div>
+			</div>
+		</div>
+        <div class="col mx-6 p-4 hobbi rounded">
+			<div class="card" style="width: 80%; margin:auto">
+                <img src="img/Galeria/avasikilato.JPG" height="600px" alt="">
+				<div class="card-body">
+					<p class="card-text h5 fw-bold text-center">Avasi Kilátó Építés</p>
 				</div>
 			</div>
 		</div>
