--- a/galeria.html
+++ b/galeria.html
@@ -70,7 +70,27 @@
                 <source src="img/Galeria/pingpong1.mp4" type="video/mp4">              
             </video>
             <div class="card-body">
-                <p class="card-text h5 fw-bold text-center">Átlaános Szünet</p>
+                <p class="card-text h5 fw-bold text-center">Általános Szünet</p>
+            </div>
+        </div>
+    </div>
+    <div class="col mx-6 p-4 hobbi rounded">
+        <div class="card" style="width: 80%; margin:auto">
+            <video controls>
+                <source src="img/Galeria/Cigrom+tachanka.mp4" type="video/mp4">              
+            </video>
+            <div class="card-body">
+                <p class="card-text h5 fw-bold text-center">Nándi játszik a tűzzel</p>
+            </div>
+        </div>
+    </div>
+    <div class="col mx-6 p-4 hobbi rounded">
+        <div class="card" style="width: 80%; margin:auto">
+            <video controls>
+                <source src="img/Galeria/marcirugasa.MOV" type="video/mp4">              
+            </video>
+            <div class="card-body">
+                <p class="card-text h5 fw-bold text-center">Marci Rúgása</p>
             </div>
         </div>
     </div>
