--- a/emberek.html
+++ b/emberek.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/emberek.css">
-    <title>Document</title>
+    <title>Emberek</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg navbar-dark ">
@@ -742,7 +742,7 @@
             <div class="container">
               <div class="row főni">
                 <div class="col-md-6">
-                  <img src="img/emberek/Hiányzott.JPG" height="800px" class="d-block w-100" alt="...">
+                  <img src="img/emberek/Sike.jfif" height="800px" class="d-block w-100" alt="...">
                 </div>
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
