--- a/emberek.html
+++ b/emberek.html
@@ -50,7 +50,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
+                  <p class="card-text">"Miii ez ennyire sebez???"</p>
                 </div>
               </div>
             </div>
@@ -556,7 +556,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
+                  <p class="card-text">"Könnyeb meglátni másban a szálkát mint önmagadban a gerendát"</p>
                 </div>
               </div>
             </div>
