--- a/emberek.html
+++ b/emberek.html
@@ -358,7 +358,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
+                  <p class="card-text">"Ott megy Oreskó meg Zétény!"</p>
                 </div>
               </div>
             </div>
