--- a/emberek.html
+++ b/emberek.html
@@ -175,14 +175,14 @@
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
                   <p class="card-text">
-                    Név:Bíró Levente
+                    Név:Farkas Máté
                     <br>
-                    Életkor:14
+                    Életkor:15
                     <br>
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
+                  <p class="card-text">"Dunka! Dunka!"</p>
                 </div>
               </div>
             </div>
