--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
         </div>
     </nav>
 
-
+    <div class="container board">
+        <h1>Üzenet tábla</h1>
+        <div id="message-board" class="alert alert-dismissible fade show" role="alert">
+            <textarea id="message-input" placeholder="Írj egy üzenetet..."></textarea>
+            <button id="submit-btn">Küldés</button>
+        </div>
+    </div>
+    
+    <script src="js/uzenotabla.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
