--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 </a>
                 <div class="card mb-3">
                     <div class="card-body">
-                        <h2 class="card-title">Bicikli Túra!</h2>
+                        <h2 class="card-title">Lézerharc!</h2>
                         <p class="card-text">Kandó hét alkalmávól elmentünk kedden délután lézerharcozni az osztály nagyrészével! Szerintem mindenki nagyon jól szórakozott! Az összetartó csapatmunka és az izgalmas csaták emlékei biztosan sokáig velünk maradnak! Gratulálok harcosok!</p>
                         <p class="card-text"><small class="datum">Publikálva: 2024.03.26.</small></p>
                     </div>
