--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <a href="img/index/lézerharc.jpg" data-caption="Bicikli Túra!" class="lightbox">
+                <a href="img/index/lézerharc.jpg" data-caption="Lézerharc!" class="lightbox">
                     <img src="img/index/lézerharc.jpg" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
