--- a/fotok.html
+++ b/fotok.html
@@ -24,7 +24,7 @@
                         <a class="navbar" href="galeria.html">Galéria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar" href="#">Kapcsolat</a>
+                        <a class="navbar" href="uzenofal.html">ÜzenőFal</a>
                     </li>
                 </ul>
             </div>
@@ -96,7 +96,6 @@
             </div>
         </div>
     </div>
-    
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
