--- a/index.html
+++ b/index.html
@@ -31,10 +31,26 @@
         </div>
     </nav>
 
-    <br><br><br><br><br><br><br>
+    <br><br><br><br>
 
     <div class="container">
+        <h1 class="hirek">Hírek</h1>
+        <br>
+        <br>
         <div class="row">
+            <div class="col-md-6">
+                <a href="img/index/biciklizők.jpg" data-caption="Elkészült az új óra!" class="lightbox">
+                    <img src="img/index/biciklizők.jpg" class="card-img-top" alt="...">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">A bicikli túra</h2>
+                        <p class="card-text">
+                            45 km plusz a hazaút. 400 m szintemelkedés, több, mint 40 km/h max sebesség. Ez jó mulatság, férfimunka volt! Az ilyen kihívásokkal teli bringatúrák nemcsak a testet, de a lelket is megmozgatják, és büszkék lehetünk minden egyes megtett kilométerre.</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2024.04.13.</small></p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-6">
                 <a href="img/index/óra.jpg" data-caption="Elkészült az új óra!" class="lightbox">
                     <img src="img/index/óra.jpg" class="card-img-top" alt="...">
@@ -67,7 +83,7 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h2 class="card-title">Lézerharc!</h2>
-                        <p class="card-text">Kandó hét alkalmávól elmentünk kedden délután lézerharcozni az osztály nagyrészével! Szerintem mindenki nagyon jól szórakozott! Az összetartó csapatmunka és az izgalmas csaták emlékei biztosan sokáig velünk maradnak! Gratulálok harcosok!</p>
+                        <p class="card-text">Kandó hét alkalmából elmentünk kedden délután lézerharcozni az osztály nagyrészével! Szerintem mindenki nagyon jól szórakozott! Az összetartó csapatmunka és az izgalmas csaták emlékei biztosan sokáig velünk maradnak! Gratulálok harcosok!</p>
                         <p class="card-text"><small class="datum">Publikálva: 2024.03.26.</small></p>
                     </div>
                 </div>
