--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <br>
         <div class="row">
             <div class="col-md-6">
-                <a href="img/index/biciklizők.jpg" data-caption="Elkészült az új óra!" class="lightbox">
+                <a href="img/index/biciklizők.jpg" data-caption="A bicikli túra" class="lightbox">
                     <img src="img/index/biciklizők.jpg" class="card-img-top" alt="...">
                 </a>
                 <div class="card mb-3">
