--- a/galeria.html
+++ b/galeria.html
@@ -43,16 +43,6 @@
 
     <div class="container mt-5">
       <div class="row">
-                <div class="col mx-6 p-4 hobbi rounded">
-        <div class="card" style="width: 80%; margin:auto">
-            <video controls>
-                <source src="img/Galeria/marcirugasa.MOV" type="video/mp4">              
-            </video>
-            <div class="card-body">
-                <p class="card-text h5 fw-bold text-center"Zsombor összeomlás</p>
-            </div>
-        </div>
-    </div>
       <div class="col mx-6 p-4 hobbi rounded">
         <div class="card" style="width: 80%; margin:auto">
             <video controls>
@@ -70,6 +60,16 @@
             </video>
             <div class="card-body">
                 <p class="card-text h5 fw-bold text-center">Általános Szünet</p>
+            </div>
+        </div>
+    </div>
+    <div class="col mx-6 p-4 hobbi rounded">
+        <div class="card" style="width: 80%; margin:auto">
+            <video controls>
+                <source src="img/Galeria/Zsombor kitörés.mp4" type="video/mp4">              
+            </video>
+            <div class="card-body">
+                <p class="card-text h5 fw-bold text-center">Zsombor kitörés</p>
             </div>
         </div>
     </div>
