--- a/emberek.html
+++ b/emberek.html
@@ -50,7 +50,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">"Miii ez ennyire sebez???"</p>
+                  <p class="card-text"></p>
                 </div>
               </div>
             </div>
