--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <div class="card-body">
                         <h2 class="card-title">A bicikli túra</h2>
                         <p class="card-text">
-                            45 km plusz a hazaút. 400 m szintemelkedés, több, mint 40 km/h max sebesség. Ez jó mulatság, férfimunka volt! Az ilyen kihívásokkal teli bringatúrák nemcsak a testet, de a lelket is megmozgatják, és büszkék lehetünk minden egyes megtett kilométerre.</p>
+                            45 km plusz a hazaút. 400 m szintemelkedés, több, mint 40 km/h max sebesség. Ez jó mulatság, férfimunka volt! Az ilyen kihívásokkal teli bringatúrák nemcsak a testet, de a lelket is megmozgatják, és büszkék lehetünk minden egyes megtett kilométerre!</p>
                         <p class="card-text"><small class="datum">Publikálva: 2024.04.13.</small></p>
                     </div>
                 </div>
