--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <br>
         <br>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/biciklizők.jpg" data-caption="A bicikli túra" class="lightbox">
                     <img src="img/index/biciklizők.jpg" class="card-img-top" alt="...">
                 </a>
@@ -51,7 +51,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/óra.jpg" data-caption="Elkészült az új óra!" class="lightbox">
                     <img src="img/index/óra.jpg" class="card-img-top" alt="...">
                 </a>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/túra_térkép.jpg" data-caption="Bicikli Túra!" class="lightbox">
                     <img src="img/index/túra_térkép.jpg" class="card-img-top" alt="...">
                 </a>
@@ -76,7 +76,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/lézerharc.jpg" data-caption="Lézerharc!" class="lightbox">
                     <img src="img/index/lézerharc.jpg" class="card-img-top" alt="...">
                 </a>
