--- a/galeria.html
+++ b/galeria.html
@@ -79,7 +79,17 @@
                 <source src="img/Galeria/zsombor_hal.mp4" type="video/mp4">              
             </video>
             <div class="card-body">
-                <p class="card-text h5 fw-bold text-center">Zsombor + C4</p>
+                <p class="card-text h5 fw-bold text-center">Boti és a C4</p>
+            </div>
+        </div>
+    </div>
+    <div class="col mx-6 p-4 hobbi rounded">
+        <div class="card" style="width: 80%; margin:auto">
+            <video controls>
+                <source src="img/Galeria/Green_fn.mp4" type="video/mp4">              
+            </video>
+            <div class="card-body">
+                <p class="card-text h5 fw-bold text-center">Marci Rúgása</p>
             </div>
         </div>
     </div>
