--- a/galeria.html
+++ b/galeria.html
@@ -79,7 +79,7 @@
                 <source src="img/Galeria/zsombor_hal.mp4" type="video/mp4">              
             </video>
             <div class="card-body">
-                <p class="card-text h5 fw-bold text-center">Boti és a C4</p>
+                <p class="card-text h5 fw-bold text-center">Zsombor+C4</p>
             </div>
         </div>
     </div>
@@ -89,7 +89,7 @@
                 <source src="img/Galeria/Green_fn.mp4" type="video/mp4">              
             </video>
             <div class="card-body">
-                <p class="card-text h5 fw-bold text-center">Marci Rúgása</p>
+                <p class="card-text h5 fw-bold text-center">Green fn</p>
             </div>
         </div>
     </div>
