--- a/fotok.html
+++ b/fotok.html
@@ -24,7 +24,7 @@
                         <a class="navbar" href="galeria.html">Galéria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar" href="uzenofal.html">ÜzenőFal</a>
+                        <a class="navbar" href="">ÜzenőFal</a>
                     </li>
                 </ul>
             </div>
