--- a/emberek.html
+++ b/emberek.html
@@ -116,7 +116,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
+                  <p class="card-text">"Ha az erőszak nem megoldás valamire, az azt jelenti hogy nem használsz elég erőszakot!"</p>
                 </div>
               </div>
             </div>
@@ -153,7 +153,7 @@
                 <div class="col-md-6 card-content">
                   <h5 class="card-title">Leírás</h5>
                   <p class="card-text">
-                    Név:Bíró Levente
+                    Név:Biró Levente
                     <br>
                     Életkor:14
                     <br>
