--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="card mb-3">
                     <div class="card-body">
                         <h2 class="card-title">Elkészült az új óra!</h2>
-                        <p class="card-text">Sok idő után elkészült az osztálytermünk új digitális órája. Sándor Péter tanárúr segítségével <b>Balázs Botond,Bíró Levente,Fodor Levente,Homolya Nándor, Kuruzc Gergő</b> tanulók hozták létre. Nagyon gratulálunk nekik!</p>
+                        <p class="card-text">Sok idő után elkészült az osztálytermünk új digitális órája. Sándor Péter tanárúr segítségével <b>Balázs Botond,Biró Levente,Fodor Levente,Homolya Nándor, Kuruzc Gergő</b> tanulók hozták létre. Nagyon gratulálunk nekik!</p>
                         <p class="card-text"><small class="datum">Publikálva: 2024.04.12.</small></p>
                     </div>
                 </div>
