--- a/emberek.html
+++ b/emberek.html
@@ -754,7 +754,7 @@
                   </p>
                   <hr>
                   <p class="blockquote-footer quote">Idézet</p>
-                  <p class="card-text">""</p>
+                  <p class="card-text">"Sike®, a név kötelez"</p>
                 </div>
               </div>
             </div>
