--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <a class="navbar" href="galeria.html">Galéria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="navbar" href="">ÜzenőFal</a>
+                        <a class="nav-link" href="orarend.html">Órarend</a>
                     </li>
                 </ul>
             </div>
@@ -38,6 +38,21 @@
         <br>
         <br>
         <div class="row">
+            <div class="col-md-12 col-12 col-lg-6">
+                <a href="img/index/erettsegi.jpg"  data-caption="Éretségi Kép" class="lightbox">
+                    <img src="img/index/erettsegi.jpg" height="332" class="card-img-top" alt="...">
+                </a>
+                <div class="card mb-3">
+                    <div class="card-body">
+                        <h2 class="card-title">Éretségi Heti Órarend</h2>
+                        <p class="card-text">Jövő héten érettségik miatt:</p>
+                        <p class="card-text">Hétfőn (május.6.) és csütörtökön (május 9.) nincs tanítás</p>
+                        <p class="card-text">Kedden (május.7.) és szerdán (május 8.) délutáni tanítás van 13:00-tól rövidítve tartjuk az 1-4. órákat.</p>
+                        <p class="card-text">A pénteki órák rendje változatlan</p>
+                        <p class="card-text"><small class="datum">Publikálva: 2024.04.13.</small></p>
+                    </div>
+                </div>
+            </div>
             <div class="col-md-12 col-12 col-lg-6">
                 <a href="img/index/biciklizők.jpg" data-caption="A bicikli túra" class="lightbox">
                     <img src="img/index/biciklizők.jpg" class="card-img-top" alt="...">
